{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 12,
  "lineage": "be34f73e-9acc-1dcf-5bd8-70ee4bd1ab8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d435f7779e5e1c8b",
            "domain": "vpc",
            "id": "eipalloc-0d435f7779e5e1c8b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-202-180-186.compute-1.amazonaws.com",
            "public_ip": "34.202.180.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073241923933:internet-gateway/igw-0d36913280d7b4a48",
            "id": "igw-0d36913280d7b4a48",
            "owner_id": "073241923933",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-00d5f4ea7ddbea304"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d435f7779e5e1c8b",
            "connectivity_type": "public",
            "id": "nat-0083c475d63b1c7dd",
            "network_interface_id": "eni-006aed1aee126a503",
            "private_ip": "192.168.3.18",
            "public_ip": "34.202.180.186",
            "subnet_id": "subnet-00008f304152c32e3",
            "tags": {
              "Name": "NGW"
            },
            "tags_all": {
              "Name": "NGW"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.pri",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073241923933:route-table/rtb-04f40a4c749770696",
            "id": "rtb-04f40a4c749770696",
            "owner_id": "073241923933",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d36913280d7b4a48",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d5f4ea7ddbea304"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073241923933:route-table/rtb-0915e979334768872",
            "id": "rtb-0915e979334768872",
            "owner_id": "073241923933",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0083c475d63b1c7dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d5f4ea7ddbea304"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.ngw",
            "aws_subnet.pri",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8b2acc0af0145e1",
            "route_table_id": "rtb-04f40a4c749770696",
            "subnet_id": "subnet-0d0232007ed305080"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.pub",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0404188b7fd6082af",
            "route_table_id": "rtb-0915e979334768872",
            "subnet_id": "subnet-00008f304152c32e3"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt2",
            "aws_subnet.pri",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073241923933:security-group/sg-050334bba3d5ccff9",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050334bba3d5ccff9",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "first-SG",
            "name_prefix": "",
            "owner_id": "073241923933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "first-SG"
            },
            "tags_all": {
              "Name": "first-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d5f4ea7ddbea304"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073241923933:subnet/subnet-00008f304152c32e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00008f304152c32e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "073241923933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-00d5f4ea7ddbea304"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073241923933:subnet/subnet-0d0232007ed305080",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0232007ed305080",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "073241923933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-00d5f4ea7ddbea304"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073241923933:vpc/vpc-00d5f4ea7ddbea304",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09163a69022ba94ce",
            "default_route_table_id": "rtb-05da973cffb5a5379",
            "default_security_group_id": "sg-048fa2554e66c7b05",
            "dhcp_options_id": "dopt-0e4401ba597d71cd6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00d5f4ea7ddbea304",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05da973cffb5a5379",
            "owner_id": "073241923933",
            "tags": {
              "Name": "demo_vpc"
            },
            "tags_all": {
              "Name": "demo_vpc"
            }
          }
        }
      ]
    }
  ]
}